# pipelinebench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/tasks/broken_csv_ingestion/: problem.md  solution_notes.md  task.yaml
benchmark/tasks/broken_csv_ingestion/reference_solution/: pipeline.py
benchmark/tasks/broken_csv_ingestion/seed_data/: customers_2024_01.csv  customers_2024_02.csv
benchmark/tasks/broken_csv_ingestion/starter/: pipeline.py
benchmark/tasks/cdc_dedup_scd1/: problem.md  solution_notes.md  task.yaml
benchmark/tasks/duckdb_sql_regression/: problem.md  solution_notes.md  task.yaml
benchmark/tasks/feature_leakage_timeseries/: problem.md  solution_notes.md  task.yaml
benchmark/tasks/schema_drift_parquet/: problem.md  solution_notes.md  task.yaml
docs/: agent-runners.md  architecture.md  baselines.md  demo.md  launch.md  task-authoring.md
examples/results/codex-v0.1.0/: README.md  broken_csv_ingestion.json  cdc_dedup_scd1.json  duckdb_sql_regression.json  feature_leakage_timeseries.json  leaderboard.json  leaderboard.md  results.json  run_metadata.json  schema_drift_parquet.json  summary.md
examples/results/cursor-v0.1.0/: README.md  broken_csv_ingestion.json  cdc_dedup_scd1.json  duckdb_sql_regression.json  feature_leakage_timeseries.json  leaderboard.json  leaderboard.md  results.json  run_metadata.json  schema_drift_parquet.json  summary.md
src/pipelinebench/: __init__.py  adapters.py  cli.py  leaderboard.py  runner.py  schema.py  scoring.py  tasks.py  workspace.py
tests/: test_harness.py
(+15 files in other folders)
